# _Agentic_AI_Comparison_maker_A_CrewAI_Project

./: .env  .gitignore  README.md  pyproject.toml
output/: tool_comparison_report.md
src/comparison/: crew.py  main.py
src/comparison/config/: agents.yaml  tasks.yaml
