[project]
name = "comparison"
version = "0.1.0"
description = "comparison using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
comparison = "comparison.main:run"
run_crew = "comparison.main:run"
train = "comparison.main:train"
replay = "comparison.main:replay"
test = "comparison.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
